exposed title field for List Content codehook

--- a/templates/src/components/codehooks/FeaturedArticle.astro
+++ b/templates/src/components/codehooks/FeaturedArticle.astro
@@ -40,7 +40,7 @@ const bgColor = parsedOptions.bgColor || '';
       class="mx-auto w-full max-w-7xl px-8 py-12"
       style={bgColor ? `background-color: ${bgColor}` : ''}
     >
-      <div class="grid grid-cols-1 items-center gap-x-16 gap-y-12 md:grid-cols-2">
+      <div class="grid grid-cols-1 items-center md:grid-cols-2 md:gap-y-12">
         <div class="w-full">
           <a href={`/${featuredStory.slug}`} class="block">
             <div class="max-w-lg pr-12">
