--- a/templates/css/custom.css
+++ b/templates/css/custom.css
@@ -49,3 +49,20 @@ body {
   color: #888;
   font-style: italic;
 }
+
+/*
+ * When an element is being edited,
+ * add an invisible zero-width space *before* a link
+ * if it's the very first child of its parent.
+*/
+[contenteditable="true"] > a[href]:first-child::before {
+  content: '\u200B';
+}
+
+/*
+ * Add an invisible zero-width space *after* a link
+ * if it's the very last child of its parent.
+*/
+[contenteditable="true"] > a[href]:last-child::after {
+  content: '\u200B';
+}
