--- a/templates/src/pages/context/[...contextSlug].astro
+++ b/templates/src/pages/context/[...contextSlug].astro
@@ -126,6 +126,7 @@ if (!brandConfig.SITE_INIT) {
         codeHookTarget ? (
           <CodeHook
             target={codeHookTarget}
+            paneId={paneId}
             resourcesPayload={resourcesPayload}
             fullContentMap={fullContentMap}
           />
