--- a/templates/src/pages/[...slug].astro
+++ b/templates/src/pages/[...slug].astro
@@ -97,6 +97,7 @@ if (!fragmentsData) {
     `/maint?from=${encodeURIComponent(Astro.url.pathname)}`
   );
 }
+console.log(fragmentsData);
 
 const fullContentMap = await getFullContentMap(tenantId);
 const description = fullContentMap.find(
