--- a/templates/src/pages/maint.astro
+++ b/templates/src/pages/maint.astro
@@ -27,7 +27,7 @@ const wordmark = getAssetPath(brandConfig?.WORDMARK, '/brand/wordmark.svg');
     <link rel="stylesheet" href="/styles/storykeep.css" />
   </head>
   <body class="h-full">
-    <div class="sm:px-6 lg:px-8 flex min-h-full flex-col justify-center py-12">
+    <div class="flex min-h-full flex-col justify-center py-12 md:px-6 xl:px-8">
       <div class="mx-auto pb-6">
         <div class="flex flex-col items-center justify-center gap-4">
           <div class="h-16 w-auto">
