--- a/templates/src/pages/storykeep/login.astro
+++ b/templates/src/pages/storykeep/login.astro
@@ -48,7 +48,7 @@ const mainStylesUrl = isDev
     <link rel="stylesheet" href={mainStylesUrl} />
   </head>
   <body class="h-full">
-    <div class="sm:px-6 lg:px-8 flex min-h-full flex-col justify-center py-12">
+    <div class="flex min-h-full flex-col justify-center py-12 md:px-6 xl:px-8">
       <div class="mx-auto pb-6">
         <!-- Logo and Wordmark -->
         <div class="flex flex-col items-center justify-center gap-4">
@@ -123,7 +123,7 @@ const mainStylesUrl = isDev
                   name="password"
                   type="password"
                   required
-                  class="sm:text-sm sm:leading-6 block w-full rounded-md border-0 px-3 py-1.5 text-mydarkgrey shadow-sm ring-1 ring-inset ring-mylightgrey placeholder:text-mylightgrey focus:ring-2 focus:ring-inset focus:ring-myorange"
+                  class="block w-full rounded-md border-0 px-3 py-1.5 text-mydarkgrey shadow-sm ring-1 ring-inset ring-mylightgrey placeholder:text-mylightgrey focus:ring-2 focus:ring-inset focus:ring-myorange md:text-sm md:leading-6"
                 />
               </div>
             </div>
