MAJOR rewrite of the editor UI/UX

--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -171,7 +171,7 @@ const createdDate = created ? new Date(created) : new Date();
         >
           Tract Stack</a
         >
-        &ndash; the &#8220;free web press&#8221; by{` `}
+        &ndash; the &#8220;free web&#8221; press by{` `}
         <a
           href="https://atriskmedia.com/?utm_source=tractstack&utm_medium=www&utm_campaign=community"
           class="font-bold underline hover:text-black"
