--- a/templates/src/pages/[...slug]/edit.astro
+++ b/templates/src/pages/[...slug]/edit.astro
@@ -12,6 +12,7 @@ import StoryKeepToolBar from '@/components/edit/ToolBar';
 import StoryKeepToolMode from '@/components/edit/ToolMode';
 import SettingsPanel from '@/components/edit/SettingsPanel';
 import { Compositor } from '@/components/compositor/Compositor';
+import ToolDragLayer from '@/components/compositor/ToolDragLayer';
 import { requireAdminOrEditor } from '@/utils/auth';
 import { preHealthCheck } from '@/utils/backend';
 
@@ -217,6 +218,7 @@ for (const [key, value] of Astro.url.searchParams) {
       />
     </div>
   </aside>
+  <ToolDragLayer client:only="react" />
 </Layout>
 
 <script>
