--- a/templates/custom/with-examples/CodeHook.astro
+++ b/templates/custom/with-examples/CodeHook.astro
@@ -62,15 +62,9 @@ export const components = {
   ) : target === 'epinet' ? (
     <EpinetWrapper fullContentMap={fullContentMap} client:only="react" />
   ) : target === 'shopify-product-grid' ? (
-    <ShopifyProductGrid
-      resources={resourcesPayload['product'] || []}
-      client:only="react"
-    />
+    <ShopifyProductGrid resources={resourcesPayload} client:only="react" />
   ) : target === 'shopify-service-list' ? (
-    <ShopifyServiceList
-      resources={resourcesPayload['service'] || []}
-      client:only="react"
-    />
+    <ShopifyServiceList resources={resourcesPayload} client:only="react" />
   ) : (
     <div class="rounded-lg bg-gray-50 p-8 text-center">
       <p class="text-gray-600">CodeHook target "{target}" not found</p>
